#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([tools/slowdown/slowdown.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_AWK
AC_PROG_LEX

# Add some cflags of our choosing
CFLAGS="${CFLAGS} -Wall -D_REENTRANT -D_THREAD_SAFE -ffast-math"


# Checks for libraries.
AC_CHECK_LIB([crypto], [main], , 
	[AC_MSG_ERROR(Unable to find libcrypto)])
AC_CHECK_LIB([dl], [main], , 
	[AC_MSG_ERROR(Unable to find libdl)])
AC_CHECK_LIB([fl], [main], ,
	[AC_MSG_ERROR(Unable to find libfl)])
AC_CHECK_LIB([m], [main], ,
	[AC_MSG_ERROR(Unable to find libm)])
AC_CHECK_LIB([pthread], [main], ,
	[AC_MSG_ERROR(Unable to find libpthread)])
AC_CHECK_LIB([ssl], [main], ,
	[AC_MSG_ERROR(Unable to find libssl)])


OBJROOT=`pwd`
AC_SUBST(OBJROOT)


AC_SUBST(BUILDROOT)
AC_ARG_WITH(buildroot, [--with-buildroot=DIR set target build hierarchy to DIR],
    [ BUILDROOT="`(cd ${withval} ; pwd)`"],
    [ BUILDROOT=${OBJROOT}/target]
    )
                                                                                
                                                                                



# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/file.h sys/socket.h sys/time.h unistd.h values.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_CHECK_MEMBERS([struct stat.st_blksize])
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STAT
AC_FUNC_STRTOD
AC_CHECK_FUNCS([gethostbyaddr gethostbyname gettimeofday inet_ntoa memset mkdir select socket sqrt strdup strerror strtol])

AC_CONFIG_FILES([Makefile
		 Makefile.template
                 adiskd/Makefile
                 common/Makefile
                 idiskd/Makefile
                 lib/Makefile
                 lib/libdconfig/Makefile
                 lib/libdctl/Makefile
                 lib/libfilter/Makefile
                 lib/libfilterexec/Makefile
                 lib/liblog/Makefile
                 lib/libod/Makefile
                 lib/libodisk/Makefile
                 lib/libsearchlet/Makefile
                 lib/libtools/Makefile
                 lib/transport/Makefile
                 lib/transport/socket/Makefile
                 lib/transport/socket/common/Makefile
                 lib/transport/socket/hoststub/Makefile
                 lib/transport/socket/storagestub/Makefile
                 target/Makefile
                 target/bin/Makefile
                 target/etc/Makefile
                 target/include/Makefile
                 target/lib/Makefile
                 tools/Makefile
                 tools/dctl/Makefile
                 tools/delattr/Makefile
                 tools/dlog/Makefile
                 tools/group_count/Makefile
                 tools/initattr/Makefile
                 tools/rand_idx/Makefile
                 tools/rem_group/Makefile
                 tools/setattr/Makefile
                 tools/showattr/Makefile
                 tools/showgid/Makefile
                 tools/slowdown/Makefile])
AC_OUTPUT
